<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:circle="http://schemas.android.com/apk/res-auto"
            xmlns:marquee="http://schemas.android.com/apk/res-auto"
            android:id="@+id/act_detail_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/act_detail_item_shape"
            android:fadingEdge="none"
            android:fillViewport="true"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/space_19"
        android:paddingLeft="@dimen/space_16">

        <!-- 奖品奖励部分-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- 右边开始活动部分-->
            <FrameLayout
                android:id="@+id/act_detail_start_act_lay"
                android:layout_width="@dimen/space_136"
                android:layout_height="@dimen/space_480"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true">

                <ImageView
                    android:id="@+id/act_detail_start_act_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@mipmap/test_1"/>

                <TextView
                    android:id="@+id/act_detail_start_act_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/space_18"
                    android:layout_marginLeft="@dimen/space_28"
                    android:layout_marginRight="@dimen/space_28"
                    android:paddingTop="@dimen/space_10"
                    android:paddingBottom="@dimen/space_10"
                    android:paddingLeft="@dimen/space_5"
                    android:paddingRight="@dimen/space_5"
                    android:gravity="center"
                    android:text="@string/start_act"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold"/>
            </FrameLayout>

            <!--标题和公告部分-->
            <LinearLayout
                android:id="@+id/act_detail_title_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_24"
                android:layout_marginTop="@dimen/space_11"
                android:layout_toLeftOf="@id/act_detail_start_act_lay"
                android:layout_toStartOf="@id/act_detail_start_act_lay"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/act_detail_back_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_back"/>

                <com.zhongke.content.view.MarqueeView
                    android:id="@+id/act_detail_marquee_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_93"
                    android:background="@drawable/horn_bg_shape"
                    android:gravity="center"
                    android:paddingBottom="@dimen/space_10"
                    android:paddingLeft="@dimen/space_53"
                    android:paddingRight="@dimen/space_6"
                    android:paddingTop="@dimen/space_10"
                    marquee:drawableLeft="@mipmap/ic_horn"
                    marquee:drawablePadding="@dimen/space_10"
                    marquee:speed="10"
                    marquee:textColor="@color/horn_text_color"
                    marquee:textSize="@dimen/text_size_12"/>

                <!--<com.zhongke.launcher.view.MarqueeTextView
                    android:id="@+id/act_detail_marquee_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_73"
                    android:background="@drawable/horn_bg_shape"
                    android:drawableLeft="@mipmap/ic_horn"
                    android:drawablePadding="@dimen/space_8"
                    android:drawableStart="@mipmap/ic_horn"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:lines="1"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:paddingBottom="@dimen/space_5"
                    android:paddingLeft="@dimen/space_40"
                    android:paddingRight="@dimen/space_10"
                    android:paddingTop="@dimen/space_5"
                    android:scrollHorizontally="true"
                    android:text="路漫漫其修远兮，吾将上下而求索"
                    android:textColor="@color/horn_text_color"
                    android:textSize="@dimen/text_size_14"/>-->
            </LinearLayout>


            <!-- 奖品奖励部分-->
            <RelativeLayout
                android:id="@+id/act_detail_award_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/act_detail_title_lay"
                android:layout_marginRight="@dimen/space_24"
                android:layout_marginTop="@dimen/space_32"
                android:layout_toLeftOf="@id/act_detail_start_act_lay"
                android:layout_toStartOf="@id/act_detail_start_act_lay">

                <com.zhongke.content.view.WapGridView
                    android:id="@+id/act_detail_award_item_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_26"
                    android:background="@drawable/act_detail_item_shape"
                    android:columnWidth="@dimen/space_100"
                    android:horizontalSpacing="@dimen/space_40"
                    android:numColumns="auto_fit"
                    android:paddingBottom="@dimen/space_48"
                    android:paddingLeft="@dimen/space_20"
                    android:paddingRight="@dimen/space_20"
                    android:paddingTop="@dimen/space_48"
                    android:verticalSpacing="@dimen/space_10"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_17"
                    android:src="@mipmap/award_text"/>

                <TextView
                    android:id="@+id/act_detail_set_more_gift_btn"
                    style="@style/actDetailBtnStyle"
                    android:layout_below="@id/act_detail_award_item_lay"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/space_20"
                    android:text="@string/more_award"/>
            </RelativeLayout>

        </RelativeLayout>


        <!--参加人员部分-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/space_17">

            <!--参加人员显示区域-->
            <LinearLayout
                android:id="@+id/act_detail_member_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/space_26"
                android:background="@drawable/act_detail_item_shape"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/space_48"
                android:paddingLeft="@dimen/space_26"
                android:paddingRight="@dimen/space_26"
                android:paddingTop="@dimen/space_48">

                <!--对战家庭1-->
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.zhongke.content.view.CircleLayout
                        android:id="@+id/act_detail_circle_lay_family_1"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/space_400"
                        circle:radius="@dimen/space_160">

                        <ImageView
                            android:id="@+id/act_detail_member_demo_img"
                            android:layout_width="@dimen/space_80"
                            android:layout_height="@dimen/space_80"
                            android:background="@drawable/image_shape"
                            android:scaleType="fitXY"
                            android:src="@mipmap/ic_launcher"/>
                    </com.zhongke.content.view.CircleLayout>

                    <ImageView
                        android:id="@+id/act_detail_family_logo_1"
                        android:layout_width="@dimen/space_240"
                        android:layout_height="@dimen/space_240"
                        android:layout_gravity="center"
                        android:background="@drawable/yuanhuan_red_bg_shape"
                        android:padding="@dimen/space_3"
                        android:scaleType="fitXY"
                        android:src="@mipmap/ic_launcher"/>
                </FrameLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/vs"/>

                <!-- 对战家庭2-->
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.zhongke.content.view.CircleLayout
                        android:id="@+id/act_detail_circle_lay_family_2"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/space_400"
                        circle:radius="@dimen/space_160"/>

                    <ImageView
                        android:id="@+id/act_detail_family_logo_2"
                        android:layout_width="@dimen/space_240"
                        android:layout_height="@dimen/space_240"
                        android:layout_gravity="center"
                        android:background="@drawable/yuanhuan_blue_bg_shape"
                        android:padding="@dimen/space_3"
                        android:scaleType="fitXY"
                        android:src="@mipmap/ic_launcher"/>
                </FrameLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_17"
                android:src="@mipmap/join_member_text"/>

            <!--本次目标按钮-->
            <TextView
                android:id="@+id/act_detail_set_target_btn"
                style="@style/actDetailBtnStyle"
                android:layout_below="@id/act_detail_member_lay"
                android:layout_marginTop="@dimen/space_18"
                android:text="@string/set_target"/>

            <!--团队贡献榜按钮-->
            <TextView
                android:id="@+id/act_detail_team_contribute_btn"
                style="@style/actDetailBtnStyle"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/act_detail_member_lay"
                android:layout_marginTop="@dimen/space_18"
                android:text="团队贡献榜：成成、琳琳、小萌...>>>"/>

        </RelativeLayout>

        <!--参加人员部分-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_17"
            android:paddingRight="@dimen/space_17">

            <!--<com.zhongke.launcher.view.WapListView
                android:id="@+id/act_detail_fun_listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/space_26"
                android:background="@drawable/act_detail_item_shape"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"
                android:paddingBottom="@dimen/space_21"
                android:paddingTop="@dimen/space_48"/>-->

            <com.zhongke.content.view.WapGridView
                android:id="@+id/act_detail_fun_listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/space_26"
                android:background="@drawable/act_detail_item_shape"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"
                android:numColumns="2"
                android:paddingTop="@dimen/space_48"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:src="@mipmap/act_fun_text"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="17dp"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>